# rocal

./: .gitignore  Cargo.toml  MIT-LICENSE  README.md
examples/hello_world/: Cargo.toml  index.html  sw.js
examples/hello_world/db/migrations/: 202402090340_create_sync_connection_table.sql
examples/hello_world/src/: controllers.rs  lib.rs  models.rs  repositories.rs  templates.rs  views.rs
examples/hello_world/src/controllers/: root_controller.rs  sync_connections_controller.rs
examples/hello_world/src/models/: sync_connection.rs
examples/hello_world/src/repositories/: sync_connection_repository.rs
examples/hello_world/src/templates/: root_template.rs  sync_connection_edit_template.rs
examples/hello_world/src/views/: root_view.rs  sync_connection_view.rs
examples/self_checkout/: Cargo.toml  index.html  sw.js
examples/self_checkout/db/migrations/: 202504120810_create_product_table.sql  202504121026_create_cart_table.sql  202504130331_create_sales_table.sql
examples/self_checkout/js/: db_sync_worker.js  global.js
examples/self_checkout/src/: controllers.rs  lib.rs  models.rs  repositories.rs  templates.rs  view_models.rs  views.rs
examples/self_checkout/src/controllers/: carts_controller.rs  root_controller.rs  sales_controller.rs
examples/self_checkout/src/models/: cart_item.rs  flash_memory.rs  product.rs  sales.rs  sales_item.rs  sales_log.rs
examples/self_checkout/src/repositories/: cart_repository.rs  product_repository.rs  sales_repository.rs
examples/self_checkout/src/templates/: root_template.rs  sales_item_template.rs  sales_log_template.rs
examples/self_checkout/src/view_models/: root_view_model.rs  sales_item_view_model.rs  sales_log_view_model.rs
examples/self_checkout/src/views/: empty_view.rs  root_view.rs  sales_view.rs
examples/simple_note/: .gitignore  Cargo.toml  index.html
examples/simple_note/db/migrations/: 20250506055848-create-notes-table.sql
examples/simple_note/js/: db_query_worker.js  global.js  sqlite3.mjs  sqlite3.wasm
examples/simple_note/src/: controllers.rs  lib.rs  models.rs  templates.rs  view_models.rs  views.rs
examples/simple_note/src/controllers/: notes_controller.rs  root_controller.rs
examples/simple_note/src/models/: note.rs  note_id.rs
examples/simple_note/src/templates/: root_template.rs
examples/simple_note/src/view_models/: root_view_model.rs
examples/simple_note/src/views/: notes_view.rs  root_view.rs
rocal/: Cargo.toml
rocal/src/: lib.rs  main.rs
rocal_cli/: Cargo.toml  README.md  build.rs
rocal_cli/js/: db_query_worker.js  db_sync_worker.js  sw.js
rocal_cli/seeds/: root_template.rs
rocal_cli/src/: build.rs  commands.rs  generators.rs  init.rs  lib.rs  response.rs  rocal_api_client.rs  runner.rs  token_manager.rs
rocal_cli/src/commands/: build.rs  init.rs  login.rs  migrate.rs  password.rs  publish.rs  register.rs  subscribe.rs  sync_servers.rs  unsubscribe.rs  utils.rs
rocal_cli/src/commands/utils/: color.rs  indicator.rs  list.rs  open_link.rs  project.rs  refresh_user_token.rs  table.rs
rocal_cli/src/errors/: error.rs
rocal_cli/src/generators/: cargo_file_generator.rs  controller_generator.rs  entrypoint_generator.rs  gitignore_generator.rs  js_generator.rs  lib_generator.rs  migration_generator.rs  model_generator.rs  public_generator.rs  template_generator.rs  view_generator.rs
rocal_cli/src/rocal_api_client/: cancel_subscription.rs  create_app.rs  create_payment_link.rs  create_user.rs  login_user.rs  oob_code_response.rs  payment_link.rs  registered_sync_server.rs  send_email_verification.rs  send_password_reset_email.rs  subdomain.rs  subscription_status.rs  user_login_token.rs  user_refresh_token.rs
rocal_core/: Cargo.toml
rocal_core/src/: configuration.rs  database.rs  enums.rs  example.rs  lib.rs  migrator.rs  parsed_action.rs  parsed_route.rs  route_handler.rs  router.rs  traits.rs  utils.rs  workers.rs
rocal_core/src/enums/: request_method.rs
rocal_core/src/workers/: db_sync_worker.rs
rocal_dev_server/: Cargo.toml
rocal_dev_server/src/: lib.rs
rocal_dev_server/src/models/: content_type.rs
rocal_dev_server/src/utils/: color.rs
rocal_macro/: Cargo.toml
rocal_macro/src/: lib.rs
rocal_ui/: Cargo.toml  README.md
rocal_ui/src/: enums.rs  html.rs  html2.rs  html5.rs  lexer.rs  lib.rs  models.rs
rocal_ui/src/data_types/: linked_list.rs  queue.rs  stack.rs
rocal_ui/src/enums/: html_element.rs
rocal_ui/src/html/: to_tokens.rs
rocal_ui/src/html5/: to_tokens.rs
rocal_ui/src/models/: html_node.rs
rocal_ui/tests/: test_html_parse.rs  test_html_to_tokens.rs  test_queue.rs  test_stack.rs  ui_macro_test.rs
