[workspace]
resolver = "2"
members = [
  "rocal",
  "rocal_macro",
  "rocal_core",
  "rocal_cli",
  "rocal_ui",
  "examples/hello_world",
  "examples/self_checkout"
]

[patch.crates-io]
rocal = { path = "rocal" }
rocal-cli = { path = "rocal_cli", optional = true }
rocal-core = { path = "rocal_core" }
rocal-macro = { path = "rocal_macro" }
rocal-ui = { path = "rocal_ui" }
