[package]
name = "rocal"
version = "0.1.1"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Local-first-development driven web application framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro", "wasm", "web"]

[dependencies]
rocal-macro = "0.1"
rocal-core = "0.1"
rocal-cli = { version = "0.1", optional = true }

[lib]
name = "rocal"
path = "src/lib.rs"

[[bin]]
name = "rocal"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["rocal-cli"]
default = []
