[package]
name = "rocal"
version = "0.2.0"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Local-first-development driven web application framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro", "wasm", "web"]

[dependencies]
rocal-macro = "0.2"
rocal-core = "0.2"
rocal-cli = { version = "0.2", optional = true }
tokio = { version = "1", features = ["full"] }

[lib]
name = "rocal"
path = "src/lib.rs"

[[bin]]
name = "rocal"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["rocal-cli"]
default = []
