[package]
name = "rocal"
version = "0.2.4"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Full-Stack WASM framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro", "wasm", "web"]

[dependencies]
rocal-macro = "0.2"
rocal-core = "0.2"
rocal-cli = { version = "0.2", optional = true }
rocal-ui = "0.1"
tokio = { version = "1", features = ["full"], optional = true }

[lib]
name = "rocal"
path = "src/lib.rs"

[[bin]]
name = "rocal"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["rocal-cli", "tokio"]
default = []
