[package]
name = "rocal-cli"
version = "0.1.0"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "CLI tool for local-first-development driven web application framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
clap = { version = "4.5.28", features = ["cargo"] }

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
]