[package]
name = "rocal_core"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
url = "2"
regex = "1.11"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "History", "console", "Location", "Document", "Element", "HtmlElement", "Node", "Event", "FormData", "HtmlFormElement", "Worker", "WorkerOptions", "WorkerType"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"