[package]
name = "rocal-core"
version = "0.2.0"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Core for local-first-development driven web application framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "wasm", "web"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
url = "2"
regex = "1.11"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "History",
  "console",
  "Location",
  "Document",
  "DocumentFragment",
  "Element",
  "HtmlElement",
  "Node",
  "NodeList",
  "Event",
  "FormData",
  "HtmlFormElement",
  "Worker",
  "WorkerOptions",
  "WorkerType"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"