[package]
name = "rocal-macro"
version = "0.1.0"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Macros for local-first-development driven web application framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
rocal-core = "0.1.0"

[lib]
proc-macro = true