[package]
name = "rocal-macro"
version = "0.2.2"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Macros for Rocal - Full-Stack WASM framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro", "wasm", "web"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
rocal-core = "0.2"
rocal-ui = "0.1"

[lib]
proc-macro = true