[package]
name = "rocal-macro"
version = "0.3.2"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "Macros for Rocal - Full-Stack WASM framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["local-first", "web-framework", "macro", "wasm", "web"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
rocal-core = { version = "0.3", optional = true }
rocal-ui = { version = "0.1", optional = true }

[lib]
proc-macro = true

[features]
default = ["full"]
full = ["rocal-core", "rocal-ui"]
ui = ["rocal-ui"]