[package]
name = "rocal-ui"
version = "0.1.11"
edition = "2021"

authors = ["Yoshiki Sashiyama <yoshi@rocal.dev>"]
description = "UI for Rocal - Full-Stack WASM framework"
license = "MIT"
homepage = "https://github.com/rocal-dev/rocal"
repository = "https://github.com/rocal-dev/rocal"
readme = "README.md"
keywords = ["template-engine", "web-framework", "macro", "wasm", "web"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"