
[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rocal = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "History",
  "console",
  "Location",
  "Document",
  "DocumentFragment",
  "Element",
  "HtmlElement",
  "Node",
  "NodeList",
  "Event",
  "FormData",
  "HtmlFormElement",
  "Worker",
  "WorkerOptions",
  "WorkerType"
]}
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
